hphp/hack/test/typecheck/tuple_rvalue_only.php.exp
File "tuple_rvalue_only.php", line 5, characters 3-15:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
File "tuple_rvalue_only.php", line 5, characters 3-27:
Invalid assignment (Typing[4110])
  File "tuple_rvalue_only.php", line 5, characters 3-15:
  Expected `(nothing, nothing)`
  File "tuple_rvalue_only.php", line 5, characters 19-27:
  But got `vec<int>`
